--- a/Price Checker.ipynb
+++ b/Price Checker.ipynb
@@ -90,8 +90,8 @@
    "outputs": [],
    "source": [
     "def email():\n",
-    "    email = 'agnakul77@gmail.com'\n",
-    "    passwrd = 'nakula7699'\n",
+    "    email = '{enter your email address here}'\n",
+    "    passwrd = '{enter your password}'\n",
     "    with smtplib.SMTP('smtp.gmail.com',587) as smtp:\n",
     "        smtp.ehlo()\n",
     "        smtp.starttls()\n",
